--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>2019年を目指せ!!</title>
-	<meta name="description" content="いのししで走り抜きましょう">
+	<meta name="description" content="いのししで走り抜こう">
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
     <%= csrf_meta_tags %>
